fixed button click animation. And refresh flickering

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,6 +34,13 @@ button {
     box-shadow: 4px 4px lightgreen;
     cursor: pointer;
 }
+button:hover {
+    background: #3e8e41;
+}
+button:active {
+  box-shadow: 2px 2px lightgreen;
+  transform: translate3d(2px, 2px, 0)
+}
 
 button:focus {outline: 0;}
 
